syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.recepinanc.samplegrpcserver.sample";
option java_outer_classname = "SampleProto";

service Sample {
  rpc RandomNumber(SampleRequest) returns (SampleResponse) {
  }
}

message SampleRequest {
  int32 count = 1;
}

message SampleResponse {
  repeated int32 randomNumber = 1;
}